2009-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove define of _LARGE_FILES.
	* ndmp-src/ndmlib.h: Remove define of _LARGE_FILES.

2009-11-19  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/MainLoop.swg perl/Amanda/Xfer.swg: fix refcounting for
	  callback_sv, and hang onto the src through the callback invocation

2009-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/Makefile.am (EXTRA_DIST): Remove regenerate/.regenerate.swp

2009-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/*, config/gnulib/*: Update gnulib
				     Use getopt-gnu instead of getopt
				     Add fseeko and ftello
				     Remove visibility

2009-11-19  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/progs.m4: require swig-1.3.32, as previous versions
	  don't handle empty C strings correctly

2009-11-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Device.pod perl/Amanda/Device.swg
	  device-src/device.c device-src/device.h: add is_eom
	* device-src/rait-device.c
	  device-src/s3-device.c device-src/tape-device.c
	  device-src/vfs-device.c device-src/null-device.c: set is_eom
	  and is_eof correctl
	* perl/Amanda/Xfer.pod perl/Amanda/Xfer.swg xfer-src/xmsg.h:
	  add an eom attribute to XMsgs
	* device-src/xfer-dest-taper-splitter.c: set the attribute
	* perl/Amanda/Taper/Scribe.pm: handle EOM separately from !success

2009-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amstar.c: Print restore
	  and validate command with debug_executing.
	* common-src/util.c: New debug_executing function.
	* common-src/util.h: New debug_executing prototype.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Small memory leak.
	* restore-src/restore.c, restore-src/restore.h: Many change to fix
	  what was broken in previous patch.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c,